# length_generalization

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  generate_plot.sh  pyproject.toml  repeat_copy.sh
algorithmic/: README.md  dataset_generators.py  dataset_generators_formal.py  language_modeling_infer_hybrid.py  language_modeling_train.py  language_modeling_train_hybrid.py  language_modeling_train_ssm.py  language_modeling_train_transformer.py  model_extensions.py  models.py  run_multiple_seeds.py  utils.py
algorithmic/convenience_scripts/: generate_plot.py  generate_summary_csv.py  generate_summary_plots.py  print_dataset_words.py
algorithmic/run_scripts/: language_modeling_train_hybrid.py  language_modeling_train_shared.py  language_modeling_train_ssm.py  language_modeling_train_transformer.py
appendix-G7/: run_multiple.py  search_hyper.py
exports/: all_summary_results.csv  olmo_all.csv  olmo_fix.csv  summary_results_9bins.csv  summary_results_fixed_causality.csv
exports/models/: A_real_diagonal_matrix.txt  hybas1l1h4d0dr_weights.txt
logs/addition/: summaryhybrid41539.txt  summaryhybrid41736.txt  summaryhybrid42410.txt  summarylm41602.txt  summarylm41734.txt  summarylm41763.txt  summaryssm.txt  summaryssm41725.txt  summaryssm41781.txt
logs/bin_majority/: summary.txt  summaryhybrid42412.txt  summarylm.txt  summaryssm0.txt  summaryssm41727.txt  summaryssm41783.txt
logs/bin_majority_interleave/: summaryhybrid41540.txt  summaryhybrid41739.txt  summaryhybrid41773.txt  summaryhybrid42411.txt  summarylm41764.txt  summarylm41765.txt  summaryssm.txt  (+3 more)
(+182 files in other folders)
