[project]
name = "length-generalization"
version = "0.1.0"
description = "Code for 'A Formal Framework for Understanding Length Generalization in Transformers'"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "transformers>=4.45",
    "accelerate>=1.0",
]

[project.optional-dependencies]
# Additional deps for the formal_lang_suite experiments
formal = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "pydantic-settings>=2.0",
    "python-decouple>=3.8",
]
# Additional deps for appendix-G7 experiments
appendix = [
    "easydict>=1.10",
]
# Visualization
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
]
# Everything
all = [
    "length-generalization[formal,appendix,viz]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
